# sim-camada-fisica

./: .gitignore  CMakeLists.txt  README.txt  a.py  saida.txt
include/: CamadaEnlace.hpp  CamadaFisica.hpp
src/: CamadaEnlace.cpp  CamadaFisica.cpp  Simulador.cpp
